--- a/src/Stylesheets/index.css
+++ b/src/Stylesheets/index.css
@@ -3,3 +3,11 @@
   margin: 0;
   box-sizing: border-box;
 }
+
+button {
+  cursor: pointer;
+  border: 0;
+  outline: 0;
+  border-radius: 0.3rem;
+  padding: 0.3rem;
+}
