--- a/src/Stylesheets/header.css
+++ b/src/Stylesheets/header.css
@@ -6,5 +6,14 @@ header {
     align-items: center;
     padding: 0 0.5rem;
     color: #fff;
-    background: linear-gradient(-90deg,#0000001a, #00000081);
+    background: linear-gradient(-90deg,#0000001a, #00000081), url(./sa);
+}
+
+#map__filter__div {
+    display: none;
+}
+
+#heading__text {
+    text-transform: capitalize;
+    font: 700 1.8rem/1.5 'georgia',sans-serif;
 }
