--- a/src/Stylesheets/navBar.css
+++ b/src/Stylesheets/navBar.css
@@ -12,7 +12,7 @@ nav {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 0.8rem;
+    padding: 1rem 0.8rem;
     width: 100%;
 }
 
@@ -29,6 +29,15 @@ nav {
     cursor: pointer;
 }
 
+#hamm__btn {
+    display: grid;
+}
+
+#menu__icon {
+    width: 28px;
+    height: 23px;
+}
+
 #navigation__unordered_list {
     display: block;
     padding: 1rem;
@@ -41,7 +50,16 @@ nav {
 #navigation__unordered_list li {
     margin: 0.5rem 0;
     font-weight: 300;
+    cursor: pointer;
     width: fit-content;
+}
+
+#navigation__unordered_list li:hover {
+    color: #6e6e85;
+}
+
+.active {
+    color: #a6a6b4;
 }
 
 @media screen and (min-width: 650px) {
@@ -68,20 +86,15 @@ nav {
         color: #f0f0f0;
         font-size: 0.85rem;
         align-self: auto;
-        translate: 0 10% ;
+        translate: 0 10%;
     }
 
     #navigation__unordered_list li {
         padding: 0 0 0.5rem 0;
         margin: 0rem 1rem -0.6rem 0;
         width: 60px;
-        cursor: pointer;
         display: grid;
         place-items: center;
-    }
-
-    #navigation__unordered_list li:hover {
-        color: #6e6e85;
     }
 
     .active {
