--- a/src/Stylesheets/navBar.css
+++ b/src/Stylesheets/navBar.css
@@ -86,7 +86,7 @@ nav {
         list-style: none;
         color: #f0f0f0;
         font-size: 0.85rem;
-        translate: 0 10%;
+        translate: 10% 10%;
     }
 
     #navigation__unordered_list li {
