--- a/src/Stylesheets/header.css
+++ b/src/Stylesheets/header.css
@@ -1,9 +1,8 @@
 header {
     width: 100%;
     height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display: grid;
+    place-items: center;
     color: #fff;
     background: linear-gradient(-90deg,#0000001a, #00000081), url(../assets/header-unsplash.png) no-repeat center/cover;
 }
@@ -11,9 +10,8 @@ header {
 #header__section {
     width: 90%;
     display: flex;
-}
-#map__filter__div {
-    display: none;
+    align-items: center;
+    flex-direction: column;
 }
 
 #heading__text {
@@ -22,6 +20,10 @@ header {
 }
 
 @media screen and (min-width: 800px) {
+    #heading__text {
+        text-transform: capitalize;
+        font: 600 2rem/1.4 'georgia',sans-serif;
+    }
     #map__filter__div {
         display: block;
     }
