--- a/src/Stylesheets/header.css
+++ b/src/Stylesheets/header.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: Poppins;
+    src: url();
+}
+
 header {
     width: 100%;
     height: 100vh;
@@ -20,20 +25,20 @@ header {
 
 #heading__text {
     text-transform: capitalize;
-    font: 700 1.8rem/1.4 'georgia', sans-serif;
+    font: 700 1.8rem/1.4 'inter';
 }
 
 #map__filter__div {
     margin-top: 10px;
-    background-color: #fff;
-    padding: 0.78rem;
-    border-radius: 0.35rem;
 }
 
 #form {
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: #fff;
+    padding: 0.78rem;
+    border-radius: 0.35rem;
 }
 
 #form *:not(:last-child) {
@@ -69,8 +74,24 @@ header {
 }
 
 @media screen and (min-width: 800px) {
+    #map__image {
+        display: inline-block;
+    }
+
+    #header__section {
+        width: 70%;
+    }
+
     #heading__text {
         text-transform: capitalize;
-        font: 600 2rem/1.4 'georgia', sans-serif;
+        font: 600 2.5rem/1.4 'georgia', sans-serif;
+    }
+
+    #map__filter__div{
+        width: 50%;
+    }
+
+    #header__section {
+        flex-direction: row;
     }
 }
