--- a/src/Stylesheets/mainContent.css
+++ b/src/Stylesheets/mainContent.css
@@ -1,17 +1,20 @@
 #main__content {
-    padding: 2rem 0.7rem;
+    padding: 2rem 0.8rem;
     width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    overflow-x: hidden;
 }
 
-#minimum__article {
+#minimum__article,
+#flexibility__article {
     text-transform: capitalize;
     min-height: 100vh;
 }
 
-#minimum__text {
+#minimum__text,
+#flexibility__h2 {
     font: bolder 1.05rem sans-serif;
 }
 
@@ -55,7 +58,9 @@
 }
 
 @media screen and (min-width: 500px) {
-    #minimum__text {
+
+    #minimum__text,
+    #flexibility__h2 {
         font: bolder 1.15rem sans-serif;
     }
 
@@ -89,11 +94,13 @@
         padding: 3rem 0 0;
     }
 
-    #minimum__article {
+    #minimum__article,
+    #flexibility__article {
         width: 97%;
     }
 
-    #minimum__text {
+    #minimum__text,
+    #flexibility__h2 {
         font: bolder 1.5rem sans-serif;
         translate: 4% 0;
     }
@@ -127,7 +134,9 @@
 }
 
 @media screen and (min-width: 1200px) {
-    #minimum__article {
+
+    #minimum__article,
+    #flexibility__article {
         width: 1100px;
     }
 }
