--- a/src/Stylesheets/mainContent.css
+++ b/src/Stylesheets/mainContent.css
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     overflow-x: hidden;
 }
 
@@ -55,6 +56,45 @@
     font-size: 0.8rem;
     font-weight: 600;
     margin-left: 5px;
+}
+
+/* flexibility article */
+
+#flexibility__images {
+    position: relative;
+    height: 400px;
+    width: 100%;
+}
+
+.flexibility__h4 {
+    color: #fff;
+    font-weight: 600;
+    font-size: 0.9rem;
+    text-align: center;
+    padding: 5px 0.7rem 0;
+    border-radius: 0.5rem;
+    width: 50%;
+}
+
+.bed {
+    background: linear-gradient(-90deg, #0000001a, #00000081), url(../assets/bedinplaces.png)no-repeat center/cover;
+    height: 180px;
+}
+.happy {
+    background: linear-gradient(-90deg, #0000001a, #00000081), url(../assets/happy-guy.png)no-repeat center/cover;
+    height: 100px;
+    position: absolute;
+    top: 20px;
+    right: 0;
+}
+.cleaning {
+    background: linear-gradient(-90deg, #0000001a, #00000081), url(../assets/cleaning.png)no-repeat center/cover;
+}
+.roommates {
+    background: linear-gradient(-90deg, #0000001a, #00000081), url(../assets/roommates.png)no-repeat center/cover;
+    position: absolute;
+    bottom: 20px;
+    right: 0;
 }
 
 @media screen and (min-width: 500px) {
