modified mainContent.css in Stylesheets

--- a/src/Stylesheets/mainContent.css
+++ b/src/Stylesheets/mainContent.css
@@ -64,6 +64,7 @@
     position: relative;
     height: 400px;
     width: 100%;
+    margin: 30px 0;
 }
 
 .flexibility__h4 {
@@ -78,22 +79,27 @@
 
 .bed {
     background: linear-gradient(-90deg, #0000001a, #00000081), url(../assets/bedinplaces.png)no-repeat center/cover;
-    height: 180px;
+    height: 195px;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 .happy {
     background: linear-gradient(-90deg, #0000001a, #00000081), url(../assets/happy-guy.png)no-repeat center/cover;
-    height: 100px;
+    height: 150px;
     position: absolute;
-    top: 20px;
-    right: 0;
+    top: 35px;
+    right: -5px;
 }
 .cleaning {
     background: linear-gradient(-90deg, #0000001a, #00000081), url(../assets/cleaning.png)no-repeat center/cover;
 }
 .roommates {
     background: linear-gradient(-90deg, #0000001a, #00000081), url(../assets/roommates.png)no-repeat center/cover;
+    height: 195px;
+    width: 60%;
     position: absolute;
-    bottom: 20px;
+    bottom: 0;
     right: 0;
 }
 
