--- a/src/Stylesheets/mainContent.css
+++ b/src/Stylesheets/mainContent.css
@@ -9,7 +9,8 @@
 }
 
 #minimum__article,
-#flexibility__article {
+#flexibility__article,
+#property__article {
     text-transform: capitalize;
     min-height: 100vh;
 }
@@ -129,6 +130,62 @@
     background: #F4511E;
     color: #fff;
     font-size: 0.89rem;
+}
+
+/* form property */
+
+#property__h2 {
+    text-align: center;
+    font: 600 0.91rem sans-serif;
+}
+
+#property__form {
+    margin: 20px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 0.3rem;
+    box-shadow: -1px -1px 3px #00000021, 3px 3px 1px #0000002a;
+}
+
+.header__label {
+    font: 700 0.9rem sans-serif;
+    margin: 10px 0;
+}
+
+#form__fields {
+    display: grid;
+    grid-template-columns: 100%;
+    gap: 10px;
+    padding: 0.5rem 0;
+}
+
+.label {
+    font: 500 0.9rem sans-serif;
+}
+
+.fields {
+    background: #F9F9F9;
+    color: #737373;
+    outline: 0;
+    border: 1px solid #E6E6E6;
+    width: 100%;
+    height: 35px;
+    border-radius: 0.2rem;
+    padding: 0.3rem;
+}
+
+::placeholder {
+    text-transform: capitalize;
+    color: #737373;
+    padding: 0 0.2rem;
+}
+
+#add_new__btn {
+    height: 35px;
+    color: #fff;
+    background: #F4511E;
+    text-transform: capitalize;
 }
 
 @media screen and (min-width: 500px) {
