--- a/src/Stylesheets/mainContent.css
+++ b/src/Stylesheets/mainContent.css
@@ -158,6 +158,7 @@
     grid-template-columns: 100%;
     gap: 10px;
     padding: 0.5rem 0;
+    width: 85%;
 }
 
 .label {
@@ -176,6 +177,11 @@
     padding: 0.3rem;
 }
 
+.description__field {
+    resize: none;
+    height: 100px;
+}
+
 .photo__field {
     border: 2px dotted #F4511E;
     height: 40px;
@@ -190,6 +196,7 @@
     right: 10%;
     color: #F4511E;
 }
+
 .photo__field::after {
     content: "Drag your images here,";
     position: absolute;
@@ -213,9 +220,11 @@
 #add_new__btn {
     margin: 20px 0;
     height: 35px;
+    width: 90%;
     color: #fff;
     background: #F4511E;
     text-transform: capitalize;
+    place-self: center;
 }
 
 @media screen and (min-width: 500px) {
@@ -300,17 +309,45 @@
 
     #form__fields {
         grid-template-columns: 48% 48%;
+        width: 90%;
     }
 
-    .span__ {
-        grid-column: span 2;
+    #add_new__btn {
+        width: 80%;
     }
 
-    .span__:hover {
+    #add_new__btn:hover {
         opacity: .8;
     }
 
-    .description__field, .photo__field {
+    #property__h2 {
+        font: 500 1.1rem sans-serif;
+    }
+
+    .header__label {
+        font: 700 1.05rem sans-serif;
+    }
+
+    .description__field {
+        height: 100px;
+    }
+
+    .photo__field {
+        height: 50px;
+        cursor: pointer;
+        color: #000;
+    }
+
+    .photo__field::after,
+    .photo__field::before {
+        top: 50%;
+    }
+
+    .photo__field::before {
+        left: 43.5%;
+    }
+
+    .span__ {
         grid-column: span 2;
     }
 }
@@ -377,6 +414,40 @@
     #flexibility__write_up {
         width: 45%;
     }
+
+    #property__article {
+        width: 700px;
+    }
+
+    #form__fields {
+        grid-template-columns: repeat(3, 1fr);
+        width: 95%;
+    }
+
+    #add_new__btn {
+        width: 50%;
+    }
+
+    #property__h2 {
+        font: 500 1.5rem sans-serif;
+    }
+
+    .header__label {
+        font: 600 1.2rem sans-serif;
+    }
+
+    .photo__field::after,
+    .photo__field::before {
+        top: 50%;
+    }
+
+    .photo__field::before {
+        left: 31%;
+    }
+
+    .span__ {
+        grid-column: span 3;
+    }
 }
 
 @media screen and (min-width: 1000px) {
@@ -406,8 +477,8 @@
 
 @media screen and (min-width: 1200px) {
 
-    #minimum__article {
-        width: 1100px;
+    #minimum__article, #property__article {
+        width: 1000px;
     }
 
 }
