--- a/src/Stylesheets/mainContent.css
+++ b/src/Stylesheets/mainContent.css
@@ -231,8 +231,12 @@
 /* reviews__article */
 
 #reviews__article {
-    position: relative;
     width: 106.5%;
+}
+
+#reviews__container {
+    position: relative;
+    height: 650px;
     background: hwb(14 12% 4% / 0.15);
     padding: 1.5rem 0;
     display: flex;
@@ -242,7 +246,9 @@
 }
 
 #reviews__info {
-    width: 90%;
+    position: absolute;
+    bottom: 55px;
+    width: 85%;
     display: flex;
     flex-direction: column;
 }
@@ -285,6 +291,18 @@
 
 #reviews__profile_info small {
     font: 500 0.7rem sans-serif;
+}
+
+#reviews__video_placeholder {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 50vh;
+    background: linear-gradient(-90deg, #0000001a, #00000081), url(../assets/img-video-cover.jpg)no-repeat center/cover;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 @media screen and (min-width: 500px) {
