modified Footer.jsx and footer.css

--- a/src/Stylesheets/footer.css
+++ b/src/Stylesheets/footer.css
@@ -8,15 +8,32 @@ footer {
 #footer__container {
     width: 89%;
     border-top: 2px solid #F4511E;
-    
+}
+
+#footer__logo__address__container {
+    display: flex;
+    flex-direction: column-reverse;
+    margin: 2rem 0;
+    color: #0A142F;
+}
+
+#footer__contact_info, #footer__social_links {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0.7rem 0;
+}
+
+.odd{
+    color: hsla(224, 65%, 11%, 0.5);
 }
 
 #footer__logo {
     position: relative;
     display: grid;
     place-items: center;
-    width: 284px;
-    height: 250px;
+    width: 100%;
+    height: 50vh;
     background: #c2c2c22c;
     margin: 1rem 0;
 }
