--- a/src/Stylesheets/footer.css
+++ b/src/Stylesheets/footer.css
@@ -62,6 +62,10 @@ footer {
     cursor: pointer;
 }
 
+.footer__copyright{
+    font-size: 0.9rem;
+}
+
 @media screen and (min-width: 500px) {
 
     #footer__container {
