modified index.css in Stylesheets

--- a/src/Stylesheets/index.css
+++ b/src/Stylesheets/index.css
@@ -6,6 +6,10 @@
   -webkit-tap-highlight-color: transparent;
 }
 
+body {
+  scroll-behavior: smooth;
+}
+
 button {
   cursor: pointer;
   border: 0;
